# 100daysofcode

./: .gitignore
day_01/: main.py
day_02/: main.py
day_03/: main.py
day_04/: main.py
day_05/: main.py
day_06/: main.py
day_07/: main.py
day_08/: main.py
day_09/: main.py
day_10/: main.py
day_11/: main.py
day_12/: main.py
day_13/: main.py  modelo.html  planilha.xlsx  requirements.txt  syn_test.py
day_14/: pyproject.toml
day_15/: pyproject.toml
