[tool.poetry]
name = "day-15"
version = "0.1.0"
description = ""
authors = ["Arthur Carvalho <arthurcarvalhoc@gmail.com>"]
readme = "README.md"
packages = [{include = "day_15"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
